maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:62: error: illegal start of statement
		match getDirection() {
                ^